# angular_spheroidal_function

./: .gitignore  CMakeLists.txt  input.txt  output.txt  run.sh
src/: aaaa.txt  ang_func.f95  bouwkamp.f95  legendre.f95  matrix_fun.f95  mod_eigenvalues.f95  prog.f95  regime.f95  utils.f95
